@@ -125,7 +125,7 @@ $strSetupForm_Server_config = __('Server configuration');
 $strSetupForm_Server_desc = __('Enter server connection parameters');
 $strSetupForm_Server_login_options_desc = __('Enter login options for signon authentication');
 $strSetupForm_Server_login_options = __('Signon login options');
-$strSetupForm_Server_pmadb_desc = __('Configure phpMyAdmin database to gain access to additional features, see [a@../Documentation.html#linked-tables]linked-tables infrastructure[/a] in documentation');
+$strSetupForm_Server_pmadb_desc = __('Configure phpMyAdmin database to gain access to additional features, see [a@../Documentation.html#linked-tables]phpMyAdmin configuration storage[/a] in documentation');
 $strSetupForm_Server_pmadb = __('PMA database');
 $strSetupForm_Server_tracking_desc = __('Tracking of changes made in database. Requires configured PMA database.');
 $strSetupForm_Server_tracking = __('Changes tracking');
